update on request

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title & Description -->
-    <title>Danso Plaza – Boutique Guesthouse Retreat</title>
+    <title>Danso Plaza  </title>
     <meta
       name="description"
       content="Boutique stays designed for calm. Experience restful luxury at Danso Plaza Guesthouse – book your stay now."
@@ -22,7 +22,7 @@
     />
 
     <!-- Open Graph (Facebook, LinkedIn) -->
-    <meta property="og:title" content="Danso Plaza – Boutique Guesthouse" />
+    <meta property="og:title" content="Danso Plaza " />
     <meta property="og:description" content="Relax in comfort. Stay with us. Boutique hospitality in Accra." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dansoplaza.com" />
@@ -30,7 +30,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Danso Plaza – Boutique Guesthouse" />
+    <meta name="twitter:title" content="Danso Plaza  " />
     <meta name="twitter:description" content="Boutique stays designed for calm. Book now at Danso Plaza." />
     <meta name="twitter:image" content="/twitter-card.jpg" /> <!-- Replace or remove as needed -->
 
