--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title & Description -->
-    <title>Danso Plaza  </title>
+    <title>Danso Plaza | </title>
     <meta
       name="description"
       content="Boutique stays designed for calm. Experience restful luxury at Danso Plaza Guesthouse – book your stay now."
