update on MR request- boutique

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Danso Plaza | </title>
     <meta
       name="description"
-      content="Boutique stays designed for calm. Experience restful luxury at Danso Plaza Guesthouse – book your stay now."
+      content="Stays designed for calm. Experience restful luxury at Danso Plaza Guesthouse – book your stay now."
     />
     <meta name="author" content="Danso Plaza" />
 
@@ -23,7 +23,7 @@
 
     <!-- Open Graph (Facebook, LinkedIn) -->
     <meta property="og:title" content="Danso Plaza " />
-    <meta property="og:description" content="Relax in comfort. Stay with us. Boutique hospitality in Accra." />
+    <meta property="og:description" content="Relax in comfort. Stay with us. hospitality in Accra." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dansoplaza.com" />
     <meta property="og:image" content="/og-image.jpg" /> <!-- Add your custom image -->
@@ -31,7 +31,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Danso Plaza  " />
-    <meta name="twitter:description" content="Boutique stays designed for calm. Book now at Danso Plaza." />
+    <meta name="twitter:description" content="Stays designed for calm. Book now at Danso Plaza." />
     <meta name="twitter:image" content="/twitter-card.jpg" /> <!-- Replace or remove as needed -->
 
     <!-- Favicon (optional) -->
